fixed nav dropdown on smaller screens

--- a/src/app/_components/Navbar/Navbar.css
+++ b/src/app/_components/Navbar/Navbar.css
@@ -77,7 +77,7 @@ nav .btn-purple {
     }
 
     .nav-bg-scroll nav img {
-        height: 50px !important;
+        height: 80px !important;
     }
 }
 
@@ -116,12 +116,12 @@ nav .btn-purple {
     }
 
     .nav-bg nav .nav-links {
-        top: calc(50px + 0.5rem);
+        top: calc(80px + 0.5rem);
         transition: all .2s ease-in-out;
     }
 
     .nav-bg.nav-bg-scroll nav .nav-links {
-        top: calc(50px + 0.5rem);
+        top: calc(80px + 0.5rem);
     }
 
     nav .nav-links li {
@@ -181,5 +181,18 @@ nav .btn-purple {
     nav img {
         height: 40px !important;
         transform: translateY(0px);
+    }
+
+    .nav-bg-scroll nav img {
+        height: 40px !important;
+    }
+
+    .nav-bg nav .nav-links {
+        top: calc(40px + 0.5rem);
+        transition: all .2s ease-in-out;
+    }
+
+    .nav-bg.nav-bg-scroll nav .nav-links {
+        top: calc(40px + 0.5rem);
     }
 }
